# taskpulse

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
taskpulse/: __init__.py  core.py  monitor.py
tests/: test_core.py
